# cmake_configure_file

./: BUILD.bazel  MODULE.bazel  README.md  cmake_configure_file.bzl  cmake_configure_file.py  python_env.bzl
.bcr/: metadata.template.json
.github/workflows/: publish.yaml  release.yaml  release.yml  release_prep.sh
